# ReducedCoordRigidBodyFEM

./: CMakeLists.txt  README.md
cmake/: FindJSONCPP.cmake  FindMOSEK.cmake  FindNlohmann.cmake  FindSTB.cmake  FindTETGEN.cmake
resources/: bunny250.ply  input.json  muscle3.ply  thin_coarse.a.node
src/: Body.cpp  Body.h  BodyCuboid.cpp  BodyCuboid.h  BrenderManager.cpp  Brenderable.h  Camera.cpp  ChronoTimer.h  Comp.cpp  Comp.h  CompCylinder.cpp  CompCylinder.h  CompDoubleCylinder.cpp  CompDoubleCylinder.h  CompNull.cpp  CompNull.h  CompSphere.cpp  CompSphere.h  Constraint.cpp  Constraint.h  ConstraintAttachSoftBody.cpp  ConstraintAttachSoftBody.h  ConstraintAttachSpring.cpp  ConstraintAttachSpring.h  ConstraintJointLimit.cpp  ConstraintJointLimit.h  ConstraintLoop.cpp  ConstraintLoop.h  ConstraintNull.cpp  ConstraintNull.h  ConstraintPrescBody.cpp  ConstraintPrescBody.h  ConstraintPrescBodyAttachPoint.cpp  ConstraintPrescJoint.cpp  ConstraintPrescJoint.h  Deformable.cpp  Deformable.h  DeformableNull.cpp  DeformableNull.h  DeformableSpring.cpp  (+116 more)
